kqed_dev4/src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>PreferredPhone_old__c</fullName>
        <label>Preferred Phone_old</label>
        <picklist>
            <picklistValues>
                <fullName>Household</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Preferred_Address__c</fullName>
        <label>Preferred Address</label>
        <referenceTo>Address__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Preferred_Email__c</fullName>
        <label>Preferred Email</label>
        <picklist>
            <picklistValues>
                <fullName>Household</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alternate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Default Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assistant</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Preferred_Name__c</fullName>
        <label>Preferred Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Address_Type__c</fullName>
        <label>Primary Address Type</label>
        <picklist>
            <picklistValues>
                <fullName>Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Address_Type_old__c</fullName>
        <label>Primary Address Type</label>
        <picklist>
            <picklistValues>
                <fullName>Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Private__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Private</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Profession_Industry__c</fullName>
        <label>Profession/Industry</label>
        <picklist>
            <picklistValues>
                <fullName>ARCHITECT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ART</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUTHOR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BUSINESS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EDUCATION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENT. AGENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENTERTAINMT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FASHION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FILMTV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FINANCE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HOTEL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JOURNALIST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LAW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LEGAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MUSEUM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MUSIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MUSICIAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NONPROFIT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTHER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>POLITICIAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PUBLICBROAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PUBLICRADIO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REALES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>THEATRE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRAVEL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WEBTECH</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Prospect_Research_Report__c</fullName>
        <label>Prospect Research Report</label>
        <referenceTo>Prospect_Research_Reports__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referred_By__c</fullName>
        <label>Referred By</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_Email__c</fullName>
        <label>Renewal Email</label>
        <picklist>
            <picklistValues>
                <fullName>Limited Renewal Appeals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No E-Renewals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Sustainer Invite Appeals</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SD_ContactID__c</fullName>
        <description>Drive Premiums</description>
        <inlineHelpText>The SD_ContactID from the SubDrive db.</inlineHelpText>
        <label>SD_ContactID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_CONTACT_ID__c</fullName>
        <displayFormat>C{00000000}</displayFormat>
        <label>SFDC CONTACT ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>STS__c</fullName>
        <description>TA Status</description>
        <inlineHelpText>See Contact Status with real values that are mapped from these TA values</inlineHelpText>
        <label>TA Status</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Address_Type__c</fullName>
        <label>Secondary Address Type</label>
        <picklist>
            <picklistValues>
                <fullName>Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Secondary_Address_Type_old__c</fullName>
        <label>Secondary Address Type</label>
        <picklist>
            <picklistValues>
                <fullName>Household</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sent_Bulk__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Drive Premiums</description>
        <inlineHelpText>Have we sent the Bulk letter?</inlineHelpText>
        <label>Sent - Bulk</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sent_Confirmation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Drive Premiums</description>
        <inlineHelpText>Have we sent the Confirmation letter?</inlineHelpText>
        <label>Sent Confirmation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sent_Reminder__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Drive Premiums</description>
        <inlineHelpText>Have we sent the Reminder letter?</inlineHelpText>
        <label>Sent Reminder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sent_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Drive Premiums</description>
        <inlineHelpText>Have we sent the Request letter?</inlineHelpText>
        <label>Sent Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sent_Thanks__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Drive Premiums</description>
        <inlineHelpText>Have we sent the Thanks letter?</inlineHelpText>
        <label>Sent Thanks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Special_Mailings__c</fullName>
        <label>Special Mailings</label>
        <picklist>
            <picklistValues>
                <fullName>No End of Year Tax Letter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Legacy Society Mailings</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Station_Affiliation__c</fullName>
        <label>Station Affiliation</label>
        <picklist>
            <picklistValues>
                <fullName>KQED TV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KQED FM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KQED+</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>SystemAccountProcessor__c</fullName>
        <label>_SYSTEM: ACCOUNT PROCESSOR</label>
        <picklist>
            <picklistValues>
                <fullName>One-to-One</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Individual</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SystemHouseholdProcessor__c</fullName>
        <description>Used to set if Households should get created for all Contacts, or just those which are connected to an individual account</description>
        <label>_SYSTEM: HOUSEHOLD PROCESSOR</label>
        <picklist>
            <picklistValues>
                <fullName>All Individual Contacts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All New or Edited Contacts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Contacts</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SystemIsIndividual__c</fullName>
        <defaultValue>false</defaultValue>
        <label>_SYSTEM: IsIndividual - DEPRECATED</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TaContactId__c</fullName>
        <description>TA Contact Id</description>
        <externalId>true</externalId>
        <label>Legacy ID</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TixCustomerNumber__c</fullName>
        <description>External ID populated with Customer Number in the data imported from Tix.</description>
        <externalId>true</externalId>
        <inlineHelpText>External ID populated with Customer Number in the data imported from Tix.</inlineHelpText>
        <label>TixCustomerNumber</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Paid_Amt__c</fullName>
        <inlineHelpText>Column: TOTAL PAID AMOUNT (ACCOUNT ACTIVITIES). Added for early Major Gifts import.</inlineHelpText>
        <label>Total Paid Amt</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Pledge_Amt__c</fullName>
        <inlineHelpText>Column: TOTAL PLEDGE AMOUNT (ACCOUNT ACTIVITIES). Added for early Major Gifts data import.</inlineHelpText>
        <label>Total Pledge Amt</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Twitter_URL__c</fullName>
        <inlineHelpText>What is the web address of their Twitter page?</inlineHelpText>
        <label>Twitter URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Use_Name_on_Copy__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Drive Premiums</description>
        <inlineHelpText>Should we use this name on Copy?</inlineHelpText>
        <label>Use Name on Copy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Use_this_name_on_Copy__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Drive Premiums</description>
        <inlineHelpText>A confirmation flag to include the name of this Contact on copy related to a premium or account.</inlineHelpText>
        <label>Use this name on Copy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vol_Pref__c</fullName>
        <description>This is from the classification object</description>
        <label>Volunteer Preferences</label>
        <picklist>
            <picklistValues>
                <fullName>Development Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Docent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heritage Events</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio Pledge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TV Pledge</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>WorkEmail__c</fullName>
        <label>Work Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>WorkPhone__c</fullName>
        <label>Work Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Work_Address__c</fullName>
        <formula>if(
  ISPICKVAL(Primary_Address_Type__c,&quot;Work&quot;),
  if(LEN(MailingStreet)&gt;0, MailingStreet &amp; &quot;, &quot; , &quot;&quot; ) &amp; 
  if(LEN(MailingCity)&gt;0, MailingCity &amp; &quot;, &quot; , &quot;&quot; )&amp; 
  if(LEN(MailingState)&gt;0, MailingState &amp; &quot; &quot; , &quot;&quot; )&amp; 
  if(LEN(MailingPostalCode)&gt;0, MailingPostalCode,&quot;&quot;) &amp; 
  If(LEN( MailingCountry ) &gt;0, &quot;, &quot; &amp;MailingCountry,&quot;&quot;)
,
if(ISPICKVAL(Secondary_Address_Type__c,&quot;Work&quot;),
  if(LEN(OtherStreet)&gt;0, OtherStreet &amp; &quot;, &quot; , &quot;&quot; ) &amp; 
  if(LEN(OtherCity)&gt;0, OtherCity &amp; &quot;, &quot; , &quot;&quot; )&amp; 
  if(LEN(OtherState)&gt;0, OtherState &amp; &quot; &quot; , &quot;&quot; )&amp; 
  if(LEN(OtherPostalCode)&gt;0, OtherPostalCode,&quot;&quot;) &amp; 
  If(LEN(OtherCountry ) &gt;0, &quot;, &quot; &amp; OtherCountry,&quot;&quot;)
  ,&quot;&quot; 
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Work Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>age_range__c</fullName>
        <description>Age Range</description>
        <inlineHelpText>List of age ranges</inlineHelpText>
        <label>Age Range</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12-17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18-24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25-29</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30-34</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>35-39</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40-44</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>45-49</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50-54</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>55-59</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6-11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60-64</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>65-74</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>75+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>alt_account_id__c</fullName>
        <description>Alt Account Id</description>
        <label>Alt Account Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>batch_process_count__c</fullName>
        <description>This field is used for Apex batch processing for post processing ETL information</description>
        <label>Batch Process Count</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>bulk_load__c</fullName>
        <defaultValue>false</defaultValue>
        <description>ETL migration process</description>
        <label>bulk_load</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>comments__c</fullName>
        <description>Comments</description>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>deceased_date__c</fullName>
        <description>Deceased Date</description>
        <label>Date of Death</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>deceased_flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Deceased Flag</description>
        <label>Deceased Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>gender__c</fullName>
        <description>Gender</description>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both -Only for account gender</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>gender_value__c</fullName>
        <description>Gender Value</description>
        <label>Gender Value</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maiden_name__c</fullName>
        <description>Maiden Name</description>
        <label>Maiden Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>middle_name__c</fullName>
        <description>Middle Name</description>
        <label>Middle Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>suffix__c</fullName>
        <description>Suffix</description>
        <label>Suffix</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ta_fax_id__c</fullName>
        <label>Ta Fax Id for update</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ta_homeemail_id__c</fullName>
        <label>Ta HomeEmail Id for update</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ta_homephone_id__c</fullName>
        <label>Ta HomePhone Id for update</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ta_mobilephone_id__c</fullName>
        <label>Ta Cell Phone Id for update</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ta_workemail_id__c</fullName>
        <label>Ta WorkEmail Id for update</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ta_workphone_id__c</fullName>
        <label>Ta WorkPhone Id for update</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>MyContactsNoAccounts</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>equals</operation>
            <value>Press File</value>
        </filters>
        <label>Contacts w/ out Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyContactsNoEmails</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.EMAIL</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Press_Record_Type</value>
        </filters>
        <label>Contacts w/ out Emails</label>
    </listViews>
    <listViews>
        <fullName>My_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>Contact_Record_Type</fullName>
        <active>true</active>
        <label>Contact Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Contact_Standard</fullName>
        <active>true</active>
        <label>Contact Standard</label>
    </recordTypes>
    <recordTypes>
        <fullName>HH_Contact</fullName>
        <active>true</active>
        <description>Used for Household (member) only contacts</description>
        <label>Household Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>Household_Organization_Contact</fullName>
        <active>true</active>
        <description>Household and Organization Contact</description>
        <label>Household and Organization Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>Organization_Contact</fullName>
        <active>true</active>
        <description>Used for Organization only contacts</description>
        <label>Organization Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>Press_Record_Type</fullName>
        <active>false</active>
        <description>This is used for a Press contact.</description>
        <label>Press Record Type</label>
    </recordTypes>
    <validationRules>
        <fullName>Populated_Email_Field_Warning</fullName>
        <active>true</active>
        <description>This validation rule is only necessary for organizations that have data in the Email field before installing this package.  You don&apos;t need for this validation rule if you move all of the data from the Email field in to the NEW Work Email field.</description>
        <errorConditionFormula>AND(
NOT(ISCHANGED(Email)),
LEN(PRIORVALUE(Email))&gt;0,
ISCHANGED(Preferred_Email__c),
NOT(OR(
PRIORVALUE( Email) = PRIORVALUE( WorkEmail__c),
PRIORVALUE( Email) = PRIORVALUE( HomeEmail__c),
PRIORVALUE( Email) = PRIORVALUE( AlternateEmail__c),
PRIORVALUE( Email) = WorkEmail__c,
PRIORVALUE( Email) = HomeEmail__c,
PRIORVALUE( Email) = AlternateEmail__c
)
)
)</errorConditionFormula>
        <errorDisplayField>Email</errorDisplayField>
        <errorMessage>The Email field MUST match the field that is designated by the Preferred Email picklist. To correct this, you must copy the existing value in the Email field to a new field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Populated_Phone_Field_Warning</fullName>
        <active>false</active>
        <description>This validation rule is only necessary for organizations that have data in the Phone field before installing this package.  You don&apos;t need this validation rule if move all of the data from the Phone field in to the NEW Work Phone field.</description>
        <errorConditionFormula>AND(
NOT(ISCHANGED(Phone)),
LEN(PRIORVALUE(Phone ))&gt;0,
ISCHANGED( PreferredPhone__c ),
NOT(OR( 
PRIORVALUE( Phone) = PRIORVALUE( WorkPhone__c ), 
PRIORVALUE( Phone) = PRIORVALUE( HomePhone), 
PRIORVALUE( Phone) = PRIORVALUE( MobilePhone ), 
PRIORVALUE( Phone) = PRIORVALUE( OtherPhone), 
PRIORVALUE( Phone) = WorkPhone__c, 
PRIORVALUE( Phone) = HomePhone, 
PRIORVALUE( Phone) = MobilePhone, 
PRIORVALUE( Phone) = OtherPhone 
) 
) 
)</errorConditionFormula>
        <errorDisplayField>Phone</errorDisplayField>
        <errorMessage>The Phone field MUST match the filed that is designated by the Preferred Phone picklist. To correct this, you must copy the existing value in the Phone field to the designated preferred phone field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Preferred_Email</fullName>
        <active>false</active>
        <description>Requires the user to select a value in the Preferred Email picklist when email addresses are entered into the email fields.</description>
        <errorConditionFormula>AND(
ISPICKVAL(  Preferred_Email__c ,&quot;&quot;),
OR(
LEN(  HomeEmail__c  )&gt;0,
LEN(  WorkEmail__c  )&gt;0,
LEN(  AlternateEmail__c  )&gt;0
)
)</errorConditionFormula>
        <errorDisplayField>Preferred_Email__c</errorDisplayField>
        <errorMessage>You must select a Preferred Email</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Preferred_Phone</fullName>
        <active>true</active>
        <description>Requires the user to select a value in the Preferred Phone picklist when phone numbers are entered into the phone number fields.</description>
        <errorConditionFormula>AND(
ISPICKVAL( PreferredPhone__c ,&quot;&quot;),
OR(
LEN( HomePhone )&gt;0,
LEN( MobilePhone )&gt;0,
LEN( OtherPhone )&gt;0,
LEN( WorkPhone__c )&gt;0
)
)</errorConditionFormula>
        <errorDisplayField>PreferredPhone__c</errorDisplayField>
        <errorMessage>You must select a Preferred Phone</errorMessage>
    </validationRules>
</CustomObject>